change to navlink and navbar elements style change

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -3,6 +3,11 @@
     background-color: bisque;
 }
 
-.item {
+.item a {
     color: black;
+    text-decoration: none;
+}
+
+.item a.activeLink{
+    color:crimson;
 }
